--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -5,7 +5,7 @@
       <title>VB Cream</title>
 
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="javascript/bundle.js"></script>
+    <script src="javascripts/bundle.js"></script>
 
     <!-- Facebook Pixel Code -->
     <script>
