--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-      <title>VB Cream</title>
+      <title>Test Vista Web</title>
 
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -11,9 +11,46 @@
     <div id="content">
 
         <h1>Hola vista web</h1>
-        <span id="uid"></span>
+        <span id="uid">que cosa</span>
     </div>
     <script>
+    var message = {
+          "attachment":{
+            "type":"template",
+            "payload":{
+              "template_type":"generic",
+              "elements": [{
+                "title":"I took Peter's 'Which Hat Are You?' Quiz",
+                "image_url": "https://bot.peters-hats.com/img/hats/fez.jpg",
+                "subtitle": "My result: Fez",
+                "default_action":{
+                  "type":"web_url",
+                  "url": "https://bot.peters-hats.com/view_quiz_results.php?user=24601"
+                },
+                "buttons":[{
+                  "type":"web_url",
+                  "url":"https://bot.peters-hats.com/hatquiz.php?referer=24601",
+                  "title":"Take the Quiz"
+                }]
+              }]
+            }
+          }
+        };
+
+        MessengerExtensions.beginShareFlow(function(share_response) {
+          // User dismissed without error, but did they share the message?
+          if(share_response.is_sent){
+            // The user actually did share.
+            // Perhaps close the window w/ requestCloseBrowser().
+            MessengerExtensions.requestCloseBrowser();
+          }
+        },
+        function(errorCode, errorMessage) {
+        // An error occurred in the process
+
+        },
+        message,
+        "broadcast");
 
        window.extAsyncInit = function() {
          // the Messenger Extensions JS SDK is done loading
@@ -22,7 +59,7 @@
            document.getElementById("uid").innerHTML =uids
            console.log(uids);
          }, function error(err) {
-
+ document.getElementById("uid").innerHTML =err
          });
        };
 
