--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -18,27 +18,29 @@
        window.extAsyncInit = function() {
 
          let message = {
-              "attachment":{
-                "type":"template",
-                "payload":{
-                  "template_type":"generic",
-                  "elements": [{
-                    "title":"I took Peter's 'Which Hat Are You?' Quiz",
-                    "image_url": "https://bot.peters-hats.com/img/hats/fez.jpg",
-                    "subtitle": "My result: Fez",
-                    "default_action":{
-                      "type":"web_url",
-                      "url": "https://bot.peters-hats.com/view_quiz_results.php?user=24601"
-                    },
-                    "buttons":[{
-                      "type":"web_url",
-                      "url":"https://bot.peters-hats.com/hatquiz.php?referer=24601",
-                      "title":"Take the Quiz"
-                    }]
-                  }]
-                }
-              }
-            };
+           "attachment": {
+             "type": "template",
+             "payload": {
+               "template_type": "generic",
+               "elements": [{
+                 "title": "Es correcta la imagen?",
+                 "subtitle": "Tap al boton para contestar.",
+                 "buttons": [
+                   {
+                     "type": "postback",
+                     "title": "Si!",
+                     "payload": "yes",
+                   },
+                   {
+                     "type": "postback",
+                     "title": "No!",
+                     "payload": "no",
+                   }
+                 ],
+               }]
+             }
+           }
+         }
 
             MessengerExtensions.beginShareFlow(function(share_response) {
               // User dismissed without error, but did they share the message?
