err template b uttons

--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -28,13 +28,15 @@ function shareFlow(){
           "subtitle": "Tap al boton para contestar.",
           "buttons": [
             {
-              "type": "postback",
-              "title": "Si!",
+              "type":"web_url",
+                  "url":"https://petersfancybrownhats.com",
+                  "title":"View Website",
               "payload": "yes",
             },
             {
-              "type": "postback",
-              "title": "No!",
+              "type":"web_url",
+                "url":"https://petersfancybrownhats.com",
+                "title":"View Website",
               "payload": "no",
             }
           ],
