--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -31,13 +31,11 @@ function shareFlow(){
               "type":"web_url",
                   "url":"https://petersfancybrownhats.com",
                   "title":"View Website",
-              "payload": "yes",
             },
             {
               "type":"web_url",
                 "url":"https://petersfancybrownhats.com",
-                "title":"View Website",
-              "payload": "no",
+                "title":"View Website 2",
             }
           ],
         }]
