generic templaye postback

--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -22,15 +22,28 @@ function shareFlow(){
     "attachment":{
        "type":"template",
        "payload":{
-         "template_type":"open_graph",
+         "template_type":"generic",
          "elements":[
             {
-             "url":"https://open.spotify.com/track/7GhIk7Il098yCjg4BQjzvb",
+             "title":"Welcome!",
+             "image_url":"https://petersfancybrownhats.com/company_image.png",
+             "subtitle":"We have the right hat for everyone.",
+             "default_action": {
+               "type": "web_url",
+               "url": "https://petersfancybrownhats.com/view?item=103",
+               "messenger_extensions": false,
+               "webview_height_ratio": "tall",
+               "fallback_url": "https://petersfancybrownhats.com/"
+             },
              "buttons":[
                {
                  "type":"web_url",
-                 "url":"https://en.wikipedia.org/wiki/Rickrolling",
-                 "title":"View More"
+                 "url":"https://petersfancybrownhats.com",
+                 "title":"View Website"
+               },{
+                 "type":"postback",
+                 "title":"Start Chatting",
+                 "payload":"DEVELOPER_DEFINED_PAYLOAD"
                }
              ]
            }
