--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -3,17 +3,133 @@
   <head>
 
       <title>Test Vista Web</title>
+      <meta charset="utf-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <style media="screen">
+      body{
+        background-color: #f9f9f9;
+      }
 
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+        .radio {
+          margin: 0.5rem;
+        }
+        .radio input[type="radio"] {
+          position: absolute;
+          opacity: 0;
+        }
+        .radio input[type="radio"] + .radio-label:before {
+          content: '';
+          background: #f4f4f4;
+          border-radius: 100%;
+          border: 1px solid #b4b4b4;
+          display: inline-block;
+          width: 1.4em;
+          height: 1.4em;
+          position: relative;
+          top: -0.2em;
+          margin-right: 1em;
+          vertical-align: top;
+          cursor: pointer;
+          text-align: center;
+          transition: all 250ms ease;
+        }
+        .radio input[type="radio"]:checked + .radio-label:before {
+          background-color: #3197EE;
+          box-shadow: inset 0 0 0 4px #f4f4f4;
+        }
+        .radio input[type="radio"]:focus + .radio-label:before {
+          outline: none;
+          border-color: #3197EE;
+        }
+        .radio input[type="radio"]:disabled + .radio-label:before {
+          box-shadow: inset 0 0 0 4px #f4f4f4;
+          border-color: #b4b4b4;
+          background: #b4b4b4;
+        }
+        .radio input[type="radio"] + .radio-label:empty:before {
+          margin-right: 0;
+        }
 
+        .form-element > .lead{
+          padding-left: 15px;
+          padding-top: 10px;
+        }
+
+        .footer {
+       position: fixed;
+       left: 0;
+       bottom: 0;
+       width: 100%;
+       text-align: center;
+    }
+    .spand-xs-button {
+        width: 100%;
+        display: block;
+    }
+    .content-form{
+          padding: 0 0 60px 0;
+    }
+    </style>
   </head>
   <body>
-    <div id="content">
 
-        <h1>Hola vista web</h1>
-        <span id="psid">psid</span>
-        <button type="button" name="button" onclick="shareFlow()">Send</button>
+    <div class="content-form" >
+      <div class="form-element">
+        <p class="lead">
+        ¿Qué tipo de servicio te interesa conocer?
+        </p>
+        <ul class="list-group ">
+          <li class="list-group-item">
+            <div class="radio">
+              <input id="radio-1" name="radio" type="radio" checked>
+              <label for="radio-1" class="radio-label">Hogar</label>
+            </div>
+        </li>
+          <li class="list-group-item">
+            <div class="radio">
+              <input id="radio-2" name="radio" type="radio">
+              <label  for="radio-2" class="radio-label">Negocio</label>
+            </div>
+          </li>
+        </ul>
+      </div>
+    }
+    <div class="form-element">
+      <p class="lead">
+      ¿Qué tipo de servicio te interesa conocer?
+      </p>
+      <ul class="list-group ">
+        <li class="list-group-item">
+          <div class="radio">
+            <input id="radio-a" name="radio2" type="radio" checked>
+            <label for="radio-a" class="radio-label">Otro</label>
+          </div>
+      </li>
+        <li class="list-group-item">
+          <div class="radio">
+            <input id="radio-b" name="radio2" type="radio">
+            <label  for="radio-b" class="radio-label">Mas</label>
+          </div>
+        </li>
+      </ul>
     </div>
+        <!-- <button type="button" name="button" onclick="shareFlow()">Send</button> -->
+
+
+    </div>
+    <div class="footer">
+        <ul class="list-group ">
+            <li class="list-group-item">
+              <button type="button" class="btn btn-primary spand-xs-button" name="button" onclick="shareFlow()">Primary</button>
+
+            </li>
+            </ul>
+
+  </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script>
 
 
@@ -28,7 +144,7 @@ function shareFlow(){
              "title":"Welcome!",
              "image_url":"https://petersfancybrownhats.com/company_image.png",
              "subtitle":"We have the right hat for everyone.",
-        
+
              "buttons":[
                {
                  "type":"web_url",
