--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -50,6 +50,9 @@
         .radio input[type="radio"] + .radio-label:empty:before {
           margin-right: 0;
         }
+        .radio-label{
+          width: 100%;
+        }
 
         .form-element > .lead{
           padding-left: 15px;
@@ -70,6 +73,8 @@
     .content-form{
           padding: 0 0 60px 0;
     }
+
+
     </style>
   </head>
   <body>
@@ -82,7 +87,7 @@
         <ul class="list-group ">
           <li class="list-group-item">
             <div class="radio">
-              <input id="radio-1" name="radio" type="radio" checked>
+              <input id="radio-1" name="radio" type="radio" >
               <label for="radio-1" class="radio-label">Hogar</label>
             </div>
         </li>
@@ -94,15 +99,14 @@
           </li>
         </ul>
       </div>
-    }
     <div class="form-element">
       <p class="lead">
       ¿Qué tipo de servicio te interesa conocer?
       </p>
       <ul class="list-group ">
-        <li class="list-group-item">
+        <li class="list-group-item" >
           <div class="radio">
-            <input id="radio-a" name="radio2" type="radio" checked>
+            <input id="radio-a" name="radio2" type="radio" >
             <label for="radio-a" class="radio-label">Otro</label>
           </div>
       </li>
@@ -114,14 +118,37 @@
         </li>
       </ul>
     </div>
-        <!-- <button type="button" name="button" onclick="shareFlow()">Send</button> -->
 
-
+    <div class="form-element">
+      <p class="lead">
+      ¿Cunatos Dispositivos conectas?
+      </p>
+      <ul class="list-group ">
+        <li class="list-group-item" >
+          <div class="radio">
+            <input id="uno" name="device" type="radio">
+            <label for="uno" class="radio-label">Uno</label>
+          </div>
+      </li>
+        <li class="list-group-item" >
+          <div class="radio">
+            <input id="dos" name="device" type="radio">
+            <label  for="dos" class="radio-label">Dos</label>
+          </div>
+        </li>
+        <li class="list-group-item" >
+          <div class="radio">
+            <input id="tres" name="device" type="radio">
+            <label  for="tres" class="radio-label">Tres</label>
+          </div>
+        </li>
+      </ul>
+    </div>
     </div>
     <div class="footer">
         <ul class="list-group ">
             <li class="list-group-item">
-              <button type="button" class="btn btn-primary spand-xs-button" name="button" onclick="shareFlow()">Primary</button>
+              <button type="button" class="btn btn-primary spand-xs-button" name="button" onclick="shareFlow()">Enviar</button>
 
             </li>
             </ul>
