--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -65,6 +65,7 @@
        bottom: 0;
        width: 100%;
        text-align: center;
+       z-index: 1000;
     }
     .spand-xs-button {
         width: 100%;
