test get data form

--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -81,6 +81,8 @@
   <body>
 
     <div class="content-form" >
+      <form id="formData">
+
       <div class="form-element">
         <p class="lead">
         ¿Qué tipo de servicio te interesa conocer?
@@ -149,11 +151,12 @@
     <div class="footer">
         <ul class="list-group ">
             <li class="list-group-item">
-              <button type="button" class="btn btn-primary spand-xs-button" name="button" onclick="shareFlow()">Enviar</button>
+              <button type="button" class="btn btn-primary spand-xs-button" name="button" onclick="sendMessage()">Enviar</button>
 
             </li>
             </ul>
-
+              <input type="hidden" id="psid" value="">
+          </form>
   </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -197,6 +200,36 @@ function shareFlow(){
   "broadcast");
 }
 
+
+function sendMessage(){
+
+  var elements = $("#formData").elements;
+    var form_content = {}
+  for (var i = 0, element; element = elements[i++];) {
+    if (element.type != 'button') {
+
+      if ((element.type == 'checkbox' || element.type == 'radio')) {
+        if (element.checked) {
+          form_content[element.name] = element.value;
+        }
+      } else if (element.type == 'password') {
+        form_content[element.id] = btoa(element.value);
+      } else if (element.type == 'email') {
+        form_content[element.id] = btoa(element.value);
+      }
+      else {
+        form_content[element.id] = element.value;
+      }
+
+    }
+  }
+  var psid = $("#psid").val();
+    if(psid){
+      form_content.psid = psid;
+     $.post('https://watson-tlmx-messenger.herokuapp.com/data', form_content)
+   }
+}
+
        window.extAsyncInit = function() {
 
 
@@ -208,7 +241,7 @@ function shareFlow(){
               if (features.indexOf("context") != -1) {
                 MessengerExtensions.getContext('2106254336275881',
                   function success(thread_context) {
-                    document.getElementById("psid").innerHTML = thread_context.psid;
+                    document.getElementById("psid").value = thread_context.psid;
                   },
                   function error(err) {
                     console.log(err);
