--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -90,13 +90,13 @@
         <ul class="list-group ">
           <li class="list-group-item">
             <div class="radio">
-              <input id="radio-1" name="radio" type="radio" >
+              <input id="radio-1" name="radio" type="radio" value = "H" >
               <label for="radio-1" class="radio-label">Hogar</label>
             </div>
         </li>
           <li class="list-group-item">
             <div class="radio">
-              <input id="radio-2" name="radio" type="radio">
+              <input id="radio-2" name="radio" type="radio" value = "N">
               <label  for="radio-2" class="radio-label">Negocio</label>
             </div>
           </li>
@@ -109,13 +109,13 @@
       <ul class="list-group ">
         <li class="list-group-item" >
           <div class="radio">
-            <input id="radio-a" name="radio2" type="radio" >
+            <input id="radio-a" name="radio2" type="radio" value = "O">
             <label for="radio-a" class="radio-label">Otro</label>
           </div>
       </li>
         <li class="list-group-item">
           <div class="radio">
-            <input id="radio-b" name="radio2" type="radio">
+            <input id="radio-b" name="radio2" type="radio" value = "M">
             <label  for="radio-b" class="radio-label">Mas</label>
           </div>
         </li>
@@ -129,19 +129,19 @@
       <ul class="list-group ">
         <li class="list-group-item" >
           <div class="radio">
-            <input id="uno" name="device" type="radio">
+            <input id="uno" name="device" type="radio" value = "uno">
             <label for="uno" class="radio-label">Uno</label>
           </div>
       </li>
         <li class="list-group-item" >
           <div class="radio">
-            <input id="dos" name="device" type="radio">
+            <input id="dos" name="device" type="radio" value = "dos">
             <label  for="dos" class="radio-label">Dos</label>
           </div>
         </li>
         <li class="list-group-item" >
           <div class="radio">
-            <input id="tres" name="device" type="radio">
+            <input id="tres" name="device" type="radio" value = "tres">
             <label  for="tres" class="radio-label">Tres</label>
           </div>
         </li>
