--- a/public/html/view-test.html
+++ b/public/html/view-test.html
@@ -171,7 +171,6 @@
 .select {
   position: relative;
   display: block;
-
   height: 2.5em;
   line-height: 2;
   background: #ffffff;
@@ -218,7 +217,7 @@ select::-ms-expand {
   <body>
 
     <div class="content-form" >
-      <form id="formData">
+      <form id="formData" novalidate>
 
       <div class="form-element">
         <p class="lead">
@@ -239,25 +238,6 @@ select::-ms-expand {
           </li>
         </ul>
       </div>
-    <div class="form-element">
-      <p class="lead">
-      ¿Qué tipo de servicio te interesa conocer?
-      </p>
-      <ul class="list-group ">
-        <li class="list-group-item" >
-          <div class="radio">
-            <input id="radio-a" name="radio2" type="radio" value = "O">
-            <label for="radio-a" class="radio-label">Otro</label>
-          </div>
-      </li>
-        <li class="list-group-item">
-          <div class="radio">
-            <input id="radio-b" name="radio2" type="radio" value = "M">
-            <label  for="radio-b" class="radio-label">Mas</label>
-          </div>
-        </li>
-      </ul>
-    </div>
 
     <div class="form-element">
       <p class="lead">
@@ -335,6 +315,20 @@ select::-ms-expand {
 
     <div class="form-element">
       <p class="lead">
+      Texto:
+      </p>
+      <ul class="list-group ">
+        <li class="list-group-item" >
+          <span class="has-float-label">
+             <textarea class="form-control" id="texto"  placeholder="Comentarios"></textarea>
+             <label for="email">Texto</label>
+         </span>
+      </li>
+      </ul>
+    </div>
+
+    <div class="form-element">
+      <p class="lead">
       Pais:
       </p>
       <ul class="list-group ">
@@ -348,6 +342,38 @@ select::-ms-expand {
             </select>
           </div>
       </li>
+      </ul>
+    </div>
+
+    <div class="form-element">
+      <p class="lead">
+      Cambio de contraseña:
+      </p>
+      <ul class="list-group ">
+        <li class="list-group-item" >
+          <span class="has-float-label">
+             <input class="form-control" id="email" type="email" placeholder="ejm@dot.com"/>
+             <label for="email">Email</label>
+         </span>
+      </li>
+      <li class="list-group-item" >
+        <span class="has-float-label">
+           <input class="form-control" id="password1" type="password" placeholder="****"/>
+           <label for="password1">Contraseña</label>
+           <small id="passwordHelpBlock" class="form-text text-muted">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+              </small>
+       </span>
+     </li>
+     <li class="list-group-item" >
+       <span class="has-float-label">
+          <input class="form-control" id="password2" type="password" placeholder="****" required/>
+          <label for="password2">Repetir Contraseña</label>
+          <div class="invalid-feedback">
+           La contraseña debe ser igual a la anterior
+         </div>
+      </span>
+    </li>
       </ul>
     </div>
 
@@ -409,8 +435,15 @@ function shareFlow(){
 
 
 function sendMessage(){
+  var form = document.getElementById('formData');
 
-  var elements =document.getElementById('formData').elements;
+  if(!form.checkValidity() ){
+    form.classList.add('was-validated');
+    return false;
+  }
+
+
+  var elements =form.elements;
     var form_content = {}
     for (var i = 0, element; element = elements[i++];) {
     if (element.type != 'button') {
